# altlib

./: .gitignore  CMakeLists.txt  Map.h  Option.h  Result.h  StackVec.h  Storage.h  String.h  StringPool.h  Vec.h
doctest/: doctest.h
math/: Matrix4.cpp  Vector2.cpp  Vector2.h  Vector3.h
src/: Array.h  Clock.h  Defer.h  File.h  Map.h  Mem.cpp  Mem.h  Option.h  Pair.h  Queue.h  Result.h  Set.h  Slice.h  StackVec.h  Storage.h  Str.cpp  Str.h  String.h  StringPool.cpp  StringPool.h  Symbol.h  TypeRegistry.h  Vec.h
src/json/: Json.h
src/math/: Matrix4.cpp  Matrix4.h  Rect.cpp  Rect.h  Utils.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
tests/: Map_test.cpp  Queue_test.cpp  Set_test.cpp  StackVec_test.cpp  Storage_test.cpp  String_test.cpp  Vec_test.cpp  test_main.cpp
